<resources>
    <string name="app_name">Calculator Application</string>
    <string name="zero">O</string>
    <string name="additionSign">+</string>
    <string name="subtractionSign">-</string>
    <string name="multiplicationSign">*</string>
    <string name="divisionSign">/</string>
    <string name="percentageSign">%</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="dot">.</string>
    <string name="clearButton">C</string>
    <string name="equalsSign">=</string>
    <string name="backSpace">⌫</string>
</resources>