<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="5dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/displayBlock1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/expression"
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:autofillHints=""
            android:clickable="false"
            android:ems="10"
            android:focusable="false"
            android:gravity="end|bottom"
            android:inputType="textPersonName"
            android:labelFor="@+id/expression"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text=""
            android:textColor="@color/white"
            android:textSize="40sp"
            tools:ignore="LabelFor,SpeakableTextPresentCheck,VisualLintTextFieldSize" />

        <EditText
            android:id="@+id/result"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:autofillHints=""
            android:clickable="false"
            android:ems="10"
            android:focusable="false"
            android:gravity="end|center"
            android:inputType="textPersonName"
            android:labelFor="@+id/result"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/zero"
            android:textColor="@color/white"
            android:textSize="60sp"
            tools:ignore="LabelFor,VisualLintTextFieldSize" />

        <LinearLayout
            android:id="@+id/linearLayout14"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="60dp">

            <Button
                android:id="@+id/clearButton"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:backgroundTint="#CC073C"
                android:text="@string/clearButton"
                android:textColor="@color/white"
                android:textSize="30sp"
                tools:ignore="VisualLintButtonSize,VisualLintBounds" />

            <Button
                android:id="@+id/backSpace"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:backgroundTint="@color/design_default_color_error"
                android:text="@string/backSpace"
                android:textColor="#E1BEE7"
                android:textSize="30sp"
                tools:ignore="VisualLintButtonSize,VisualLintBounds" />

            <Button
                android:id="@+id/percentageSign"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:backgroundTint="#2563ee"
                android:text="@string/percentageSign"
                android:textColor="@color/white"
                android:textSize="30sp"
                tools:ignore="VisualLintButtonSize,VisualLintBounds" />

            <Button

                android:id="@+id/division"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:backgroundTint="#2563ee"
                android:text="@string/divisionSign"
                android:textColor="#E1BEE7"
                android:textSize="30sp"
                tools:ignore="VisualLintButtonSize,VisualLintBounds" />
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp">

            <Button
                android:id="@+id/seven"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:backgroundTint="#232525"
                android:text="@string/seven"
                android:textColor="#58d9e8"
                android:textSize="30sp"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/eight"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:backgroundTint="#232525"
                android:text="@string/eight"
                android:textColor="#58d9e8"
                android:textSize="30sp"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/nine"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:backgroundTint="#232525"
                android:text="@string/nine"
                android:textColor="#58d9e8"
                android:textSize="30sp"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/multiplication"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:backgroundTint="#2563ee"
                android:text="@string/multiplicationSign"
                android:textColor="#E1BEE7"
                android:textSize="30sp"
                tools:ignore="VisualLintButtonSize" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp">

            <Button
                android:id="@+id/four"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:backgroundTint="#232525"
                android:text="@string/four"
                android:textColor="#58d9e8"
                android:textSize="30sp"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/five"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:backgroundTint="#232525"
                android:text="@string/five"
                android:textColor="#58d9e8"
                android:textSize="30sp"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/six"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:backgroundTint="#232525"
                android:text="@string/six"
                android:textColor="#58d9e8"
                android:textSize="30sp"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/minus"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:backgroundTint="#2563ee"
                android:text="@string/subtractionSign"
                android:textColor="#E1BEE7"
                android:textSize="30sp"
                tools:ignore="VisualLintButtonSize" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp">

            <Button
                android:id="@+id/one"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:backgroundTint="#232525"
                android:text="@string/one"
                android:textColor="#58d9e8"
                android:textSize="30sp"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/two"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:backgroundTint="#232525"
                android:text="@string/two"
                android:textColor="#58d9e8"
                android:textSize="30sp"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/three"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:backgroundTint="#232525"
                android:text="@string/three"
                android:textColor="#58d9e8"
                android:textSize="30sp"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/addition"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginStart="6dp"
                android:layout_weight="1"
                android:backgroundTint="#2563ee"
                android:text="@string/additionSign"
                android:textColor="#E1BEE7"
                android:textSize="30sp"
                tools:ignore="VisualLintButtonSize" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="5dp">

            <Button
                android:id="@+id/zero"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:backgroundTint="#232525"
                android:text="@string/zero"
                android:textColor="#58d9e8"
                android:textSize="30sp"
                tools:ignore="VisualLintButtonSize" />

            <Button
                android:id="@+id/dot"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:backgroundTint="#232525"
                android:text="@string/dot"
                android:textColor="#58d9e8"
                android:textSize="30sp"
                tools:ignore="VisualLintButtonSize" />


            <Button
                android:id="@+id/equals"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_marginStart="6dp"
                android:layout_weight="2"
                android:backgroundTint="@color/orange"
                android:text="@string/equalsSign"
                android:textSize="30sp"
                tools:ignore="VisualLintButtonSize" />
        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
